# px-nano-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
cli/: __init__.py  app.py  commands.py  config.py  display.py  input_controller.py  input_handler.py  message_factory.py  message_list.py  messages.py  rendering.py
cli/elements/: __init__.py  footer.py  footer_input.py  manager.py  menu_select.py  prompt_toolkit_input.py  terminal.py
docs/: PERFORMANCE.md  README.md  TUI_DESIGN.md  api-clients.md  architecture.md  configuration.md  custom-tools-tutorial.md  dag-builder.md  data-structures.md  quickstart.md  serialization.md  tool-execution.md  tools.md
e2e/: __init__.py  run_all.py  test_executor_cancellation.py
examples/: claude_code_api.py  codex_responses_tool.py  cost_tracking_agent.py  hello_world.py  parallel_sub_agents.py  recursive_sub_agents.py  simple_tool.py  simple_tool_async.py  sub_agent.py  sub_agent_graph.html  sub_agent_graph.json  verify_cost_calculation.py  verify_cost_calculation_codex.py
nano_agent/: __init__.py  api_base.py  cancellation.py  capture_claude_code_auth.py  claude_api.py  claude_code_api.py  codex_api.py  codex_auth.py  cost.py  dag.py  data_structures.py  execution_context.py  executor.py  fireworks_api.py  gemini_api.py  openai_api.py  tools.py
nano_agent/providers/: __init__.py  base.py  capture_claude_code_auth.py  claude.py  claude_code.py  codex.py  cost.py  fireworks.py  gemini.py  openai.py
nano_agent/tools/: __init__.py  ask_user_question.py  base.py  bash.py  edit.py  glob.py  grep.py  python.py  read.py  stat.py  tmux.py  todo.py  webfetch.py  write.py
scripts/: capture_claude_code_auth.py  console_viewer.py  viewer.py
tests/: test_api_base.py  test_claude_api.py  test_claude_code_api.py  test_cli_app.py  test_codex_api.py  test_codex_auth.py  test_cost.py  test_dag.py  test_display.py  test_execution_context.py  test_footer_input.py  test_footer_rendering.py  test_gemini_api.py  test_openai_api.py  test_tmux_tool.py  test_tool_handlers.py  test_tools.py  test_tracer.py  test_truncation.py
tui/: __init__.py  app.py  cancellation.py  display.py  simple_app.py
