[project]
name = "nano_agent"
version = "0.1.0"
description = "nano_agent: a minimalistic functional asynchronous agent - a Python library for building agent conversation systems"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "TT Nguyen", email = "xcodevn@gmail.com"}
]
keywords = ["nano_agent", "functional", "async", "agent", "dag", "claude", "anthropic", "conversation", "graph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.28.0",
    "pip>=25.3",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]


[project.urls]
Homepage = "https://github.com/NTT123/nano_agent"
Repository = "https://github.com/NTT123/nano_agent"
Issues = "https://github.com/NTT123/nano_agent/issues"

[project.scripts]
# Convenience commands for running examples
nano-agent-example-hello-world = "examples.hello_world:main"
# TUI application
nano-chat = "tui:main"
# Utility commands
nano-agent-viewer = "scripts.viewer:main"
nano-agent-console-viewer = "scripts.console_viewer:main"
nano-agent-capture-auth = "scripts.capture_claude_code_auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nano_agent", "tui", "scripts"]

[tool.uv]
# Install the package in editable mode by default for development
package = true

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tui.display"
# Rich markdown classes don't have proper type exports
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "tui.simple_app"
# prompt_toolkit decorator doesn't preserve types
disable_error_code = ["misc", "untyped-decorator"]
